Add timestamp to schema of df for model.

--- a/spark_ml/notebooks/apply_model.ipynb
+++ b/spark_ml/notebooks/apply_model.ipynb
@@ -2,35 +2,68 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import org.apache.spark.sql.types.{StructType, StringType}\n",
     "import org.apache.spark.ml.{Pipeline, PipelineModel}\n",
     "import org.apache.spark.sql.functions._\n",
-    "import org.apache.spark.sql.DataFrame\n"
+    "import org.apache.spark.sql.DataFrame\n",
+    "import org.apache.spark.sql.types._"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Current spark version is 2.4.4\n"
+     ]
+    }
+   ],
    "source": [
     "println(s\"Current spark version is ${spark.version}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "inputStreamPath = /home/jovyan/data/events-stream\n",
+       "modelPath = /home/jovyan/models/spark-ml-model\n",
+       "dataSchema = StructType(StructField(timestamp,TimestampType,true), StructField(tweet,StringType,true))\n",
+       "inputDF = [timestamp: timestamp, tweet: string]\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[timestamp: timestamp, tweet: string]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "val inputStreamPath = \"/home/jovyan/data/events-stream\"\n",
     "val modelPath = \"/home/jovyan/models/spark-ml-model\"\n",
     "\n",
     "val dataSchema = new StructType()\n",
+    "    .add(\"timestamp\", TimestampType)\n",
     "    .add(\"tweet\", StringType)\n",
     "\n",
     "val inputDF = spark\n",
@@ -42,17 +75,158 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "model = pipeline_3dfeba337f5a\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "pipeline_3dfeba337f5a"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "val model = PipelineModel.load(\"/home/jovyan/models/spark-ml-model\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "predictionsDF = [timestamp: timestamp, tweet: string ... 6 more fields]\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[timestamp: timestamp, tweet: string ... 6 more fields]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "val predictionsDF = model.transform(inputDF)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "getProbability = UserDefinedFunction(<function1>,DoubleType,Some(List(org.apache.spark.ml.linalg.VectorUDT@3bfc3ba7)))\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "UserDefinedFunction(<function1>,DoubleType,Some(List(org.apache.spark.ml.linalg.VectorUDT@3bfc3ba7)))"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import org.apache.spark.sql.functions._\n",
+    "val getProbability = udf((prediction: org.apache.spark.ml.linalg.Vector) => prediction(1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "org.apache.spark.sql.execution.streaming.StreamingQueryWrapper@689bcde"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------------------+\n",
+      "|  clean_probability|\n",
+      "+-------------------+\n",
+      "|  0.506119085226794|\n",
+      "|0.44409918165014944|\n",
+      "|0.49065237891017643|\n",
+      "| 0.5115763550216391|\n",
+      "| 0.5021846446881393|\n",
+      "|0.48400688875371084|\n",
+      "|  0.506119085226794|\n",
+      "| 0.5095230413582319|\n",
+      "| 0.4984422398503117|\n",
+      "| 0.5115763550216391|\n",
+      "| 0.5594890772238319|\n",
+      "| 0.5115763550216391|\n",
+      "|0.44409918165014944|\n",
+      "| 0.5115763550216391|\n",
+      "+-------------------+\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "\n",
     "predictionsDF.writeStream.foreachBatch { (batchDF: DataFrame, batchId: Long) =>\n",
-    "    batchDF.show()\n",
+    "    batchDF.persist()\n",
+    "    \n",
+    "    val cleanProbability = batchDF.select(getProbability($\"probability\").alias(\"clean_probability\"))\n",
+    "    cleanProbability.write.mode(\"append\").format(\"console\").save()\n",
+    "    \n",
+    "    val windowCount = batchDF\n",
+    "        .withWatermark(\"timestamp\", \"1 minute\")\n",
+    "        .groupBy(window($\"timestamp\", \"1 minute\", \"1 minute\"), $\"prediction\")\n",
+    "        .count()\n",
+    "    windowCount.write.mode(\"complete\").format(\"console\").save()\n",
+    "    \n",
+    "    batchDF.unpersist()\n",
     "}.start()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
