--- a/spark_ml/notebooks/create_spark_model.ipynb
+++ b/spark_ml/notebooks/create_spark_model.ipynb
@@ -38,9 +38,9 @@
     {
      "data": {
       "text/plain": [
-       "dataSchema = StructType(StructField(target,IntegerType,true), StructField(id,LongType,true), StructField(raw_timestamp,StringType,true), StructField(query_status,StringType,true), StructField(author,StringType,true), StructField(tweet,StringType,true))\n",
+       "dataSchema = StructType(StructField(target,IntegerType,true), StructField(id,LongType,true), StructField(timestamp,StringType,true), StructField(query_status,StringType,true), StructField(author,StringType,true), StructField(tweet,StringType,true))\n",
        "dataPath = /home/jovyan/data/training.1600000.processed.noemoticon.csv\n",
-       "raw_sentiment = [label: int, tweet: string]\n"
+       "raw_sentiment = [timestamp: string, label: int ... 1 more field]\n"
       ]
      },
      "metadata": {},
@@ -49,7 +49,7 @@
     {
      "data": {
       "text/plain": [
-       "[label: int, tweet: string]"
+       "[timestamp: string, label: int ... 1 more field]"
       ]
      },
      "execution_count": 2,
@@ -63,7 +63,7 @@
     "val dataSchema = new StructType()\n",
     "    .add(\"target\", IntegerType)\n",
     "    .add(\"id\", LongType)\n",
-    "    .add(\"raw_timestamp\", StringType)\n",
+    "    .add(\"timestamp\", StringType)\n",
     "    .add(\"query_status\", StringType)\n",
     "    .add(\"author\", StringType)\n",
     "    .add(\"tweet\", StringType)\n",
@@ -76,23 +76,23 @@
     "    .option(\"header\",false)\n",
     "    .schema(dataSchema)\n",
     "    .load(dataPath)\n",
-    "    .selectExpr(\"(case when target=4 then 1 else 0 end) as label\",\"tweet\")\n",
+    "    .selectExpr(\"timestamp\", \"(case when target=4 then 1 else 0 end) as label\",\"tweet\")\n",
     "\n",
     "raw_sentiment.groupBy($\"label\").count.show"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "labelIndexer = strIdx_1b3fa02c846a\n",
-       "tokenizer = tok_40ec759f5603\n",
-       "hashingTF = hashingTF_25f6b22d261e\n",
-       "featureIndexer = vecIdx_e68fd4c3fe96\n"
+       "labelIndexer = strIdx_fcaf5bd9ce03\n",
+       "tokenizer = tok_c29b3d3deb1b\n",
+       "hashingTF = hashingTF_c70f175279e8\n",
+       "featureIndexer = vecIdx_b2daf36b78a5\n"
       ]
      },
      "metadata": {},
@@ -110,10 +110,10 @@
     {
      "data": {
       "text/plain": [
-       "vecIdx_e68fd4c3fe96"
+       "vecIdx_b2daf36b78a5"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,13 +157,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "model = pipeline_b26c4efe5270\n"
+       "model = pipeline_3dfeba337f5a\n"
       ]
      },
      "metadata": {},
@@ -172,10 +172,10 @@
     {
      "data": {
       "text/plain": [
-       "pipeline_b26c4efe5270"
+       "pipeline_3dfeba337f5a"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,13 +195,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "sameModel = pipeline_b26c4efe5270\n"
+       "sameModel = pipeline_3dfeba337f5a\n"
       ]
      },
      "metadata": {},
@@ -210,10 +210,10 @@
     {
      "data": {
       "text/plain": [
-       "pipeline_b26c4efe5270"
+       "pipeline_3dfeba337f5a"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -233,30 +233,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+-----+--------------------+------------+--------------------+--------------------+--------------------+--------------------+--------------------+----------+\n",
-      "|label|               tweet|indexedLabel|               words|            features|     indexedFeatures|       rawPrediction|         probability|prediction|\n",
-      "+-----+--------------------+------------+--------------------+--------------------+--------------------+--------------------+--------------------+----------+\n",
-      "|    0|@switchfoot http:...|         0.0|[@switchfoot, htt...|(1000,[7,14,21,54...|(1000,[7,14,21,54...|[4.43931449741300...|[0.44393144974130...|       1.0|\n",
-      "|    0|is upset that he ...|         0.0|[is, upset, that,...|(1000,[170,193,22...|(1000,[170,193,22...|[5.46349235938573...|[0.54634923593857...|       0.0|\n",
-      "|    0|@Kenichan I dived...|         0.0|[@kenichan, i, di...|(1000,[10,36,77,1...|(1000,[10,36,77,1...|[5.60297627210827...|[0.56029762721082...|       0.0|\n",
-      "|    0|my whole body fee...|         0.0|[my, whole, body,...|(1000,[82,191,296...|(1000,[82,191,296...|[5.50443548555005...|[0.55044354855500...|       0.0|\n",
-      "|    0|@nationwideclass ...|         0.0|[@nationwideclass...|(1000,[18,96,130,...|(1000,[18,96,130,...|[5.00477983480453...|[0.50047798348045...|       0.0|\n",
-      "|    0|@Kwesidei not the...|         0.0|[@kwesidei, not, ...|(1000,[18,223,710...|(1000,[18,223,710...|[4.88423644978360...|[0.48842364497836...|       1.0|\n",
-      "|    0|         Need a hug |         0.0|      [need, a, hug]|(1000,[48,170,537...|(1000,[48,170,537...|[4.88423644978360...|[0.48842364497836...|       1.0|\n",
-      "|    0|@LOLTrish hey  lo...|         0.0|[@loltrish, hey, ...|(1000,[139,157,17...|(1000,[139,157,17...|[4.73735323941076...|[0.47373532394107...|       1.0|\n",
-      "|    0|@Tatiana_K nope t...|         0.0|[@tatiana_k, nope...|(1000,[48,234,299...|(1000,[48,234,299...|[4.88423644978360...|[0.48842364497836...|       1.0|\n",
-      "|    0|@twittera que me ...|         0.0|[@twittera, que, ...|(1000,[161,324,47...|(1000,[161,324,47...|[4.94614153371915...|[0.49461415337191...|       1.0|\n",
-      "|    0|spring break in p...|         0.0|[spring, break, i...|(1000,[13,193,301...|(1000,[13,193,301...|[4.88423644978360...|[0.48842364497836...|       1.0|\n",
-      "|    0|I just re-pierced...|         0.0|[i, just, re-pier...|(1000,[307,329,47...|(1000,[307,329,47...|[5.50443548555005...|[0.55044354855500...|       0.0|\n",
-      "|    0|@caregiving I cou...|         0.0|[@caregiving, i, ...|(1000,[56,202,234...|(1000,[56,202,234...|[5.31733102968485...|[0.53173310296848...|       0.0|\n",
-      "|    0|@octolinz16 It it...|         0.0|[@octolinz16, it,...|(1000,[126,230,32...|(1000,[126,230,32...|[4.14293320983222...|[0.41429332098322...|       1.0|\n",
-      "|    0|@smarrison i woul...|         0.0|[@smarrison, i, w...|(1000,[18,83,170,...|(1000,[18,83,170,...|[5.12017203584503...|[0.51201720358450...|       0.0|\n",
-      "|    0|@iamjazzyfizzle I...|         0.0|[@iamjazzyfizzle,...|(1000,[7,71,202,2...|(1000,[7,71,202,2...|[4.79648460326501...|[0.47964846032650...|       1.0|\n",
-      "|    0|Hollis' death sce...|         0.0|[hollis', death, ...|(1000,[2,3,18,82,...|(1000,[2,3,18,82,...|[5.0007142316676,...|[0.50007142316676...|       0.0|\n",
-      "|    0|about to file taxes |         0.0|[about, to, file,...|(1000,[108,388,48...|(1000,[108,388,48...|[4.88423644978360...|[0.48842364497836...|       1.0|\n",
-      "|    0|@LettyA ahh ive a...|         0.0|[@lettya, ahh, iv...|(1000,[13,107,201...|(1000,[13,107,201...|[4.65614738179131...|[0.46561473817913...|       1.0|\n",
-      "|    0|@FakerPattyPattz ...|         0.0|[@fakerpattypattz...|(1000,[53,102,154...|(1000,[53,102,154...|[4.56015534791861...|[0.45601553479186...|       1.0|\n",
-      "+-----+--------------------+------------+--------------------+--------------------+--------------------+--------------------+--------------------+----------+\n",
+      "+--------------------+-----+--------------------+------------+--------------------+--------------------+--------------------+--------------------+--------------------+----------+\n",
+      "|           timestamp|label|               tweet|indexedLabel|               words|            features|     indexedFeatures|       rawPrediction|         probability|prediction|\n",
+      "+--------------------+-----+--------------------+------------+--------------------+--------------------+--------------------+--------------------+--------------------+----------+\n",
+      "|Mon Apr 06 22:19:...|    0|@switchfoot http:...|         0.0|[@switchfoot, htt...|(1000,[7,14,21,54...|(1000,[7,14,21,54...|[4.43931449741300...|[0.44393144974130...|       1.0|\n",
+      "|Mon Apr 06 22:19:...|    0|is upset that he ...|         0.0|[is, upset, that,...|(1000,[170,193,22...|(1000,[170,193,22...|[5.46349235938573...|[0.54634923593857...|       0.0|\n",
+      "|Mon Apr 06 22:19:...|    0|@Kenichan I dived...|         0.0|[@kenichan, i, di...|(1000,[10,36,77,1...|(1000,[10,36,77,1...|[5.60297627210827...|[0.56029762721082...|       0.0|\n",
+      "|Mon Apr 06 22:19:...|    0|my whole body fee...|         0.0|[my, whole, body,...|(1000,[82,191,296...|(1000,[82,191,296...|[5.50443548555005...|[0.55044354855500...|       0.0|\n",
+      "|Mon Apr 06 22:19:...|    0|@nationwideclass ...|         0.0|[@nationwideclass...|(1000,[18,96,130,...|(1000,[18,96,130,...|[5.00477983480453...|[0.50047798348045...|       0.0|\n",
+      "|Mon Apr 06 22:20:...|    0|@Kwesidei not the...|         0.0|[@kwesidei, not, ...|(1000,[18,223,710...|(1000,[18,223,710...|[4.88423644978360...|[0.48842364497836...|       1.0|\n",
+      "|Mon Apr 06 22:20:...|    0|         Need a hug |         0.0|      [need, a, hug]|(1000,[48,170,537...|(1000,[48,170,537...|[4.88423644978360...|[0.48842364497836...|       1.0|\n",
+      "|Mon Apr 06 22:20:...|    0|@LOLTrish hey  lo...|         0.0|[@loltrish, hey, ...|(1000,[139,157,17...|(1000,[139,157,17...|[4.73735323941076...|[0.47373532394107...|       1.0|\n",
+      "|Mon Apr 06 22:20:...|    0|@Tatiana_K nope t...|         0.0|[@tatiana_k, nope...|(1000,[48,234,299...|(1000,[48,234,299...|[4.88423644978360...|[0.48842364497836...|       1.0|\n",
+      "|Mon Apr 06 22:20:...|    0|@twittera que me ...|         0.0|[@twittera, que, ...|(1000,[161,324,47...|(1000,[161,324,47...|[4.94614153371915...|[0.49461415337191...|       1.0|\n",
+      "|Mon Apr 06 22:20:...|    0|spring break in p...|         0.0|[spring, break, i...|(1000,[13,193,301...|(1000,[13,193,301...|[4.88423644978360...|[0.48842364497836...|       1.0|\n",
+      "|Mon Apr 06 22:20:...|    0|I just re-pierced...|         0.0|[i, just, re-pier...|(1000,[307,329,47...|(1000,[307,329,47...|[5.50443548555005...|[0.55044354855500...|       0.0|\n",
+      "|Mon Apr 06 22:20:...|    0|@caregiving I cou...|         0.0|[@caregiving, i, ...|(1000,[56,202,234...|(1000,[56,202,234...|[5.31733102968485...|[0.53173310296848...|       0.0|\n",
+      "|Mon Apr 06 22:20:...|    0|@octolinz16 It it...|         0.0|[@octolinz16, it,...|(1000,[126,230,32...|(1000,[126,230,32...|[4.14293320983222...|[0.41429332098322...|       1.0|\n",
+      "|Mon Apr 06 22:20:...|    0|@smarrison i woul...|         0.0|[@smarrison, i, w...|(1000,[18,83,170,...|(1000,[18,83,170,...|[5.12017203584503...|[0.51201720358450...|       0.0|\n",
+      "|Mon Apr 06 22:20:...|    0|@iamjazzyfizzle I...|         0.0|[@iamjazzyfizzle,...|(1000,[7,71,202,2...|(1000,[7,71,202,2...|[4.79648460326501...|[0.47964846032650...|       1.0|\n",
+      "|Mon Apr 06 22:20:...|    0|Hollis' death sce...|         0.0|[hollis', death, ...|(1000,[2,3,18,82,...|(1000,[2,3,18,82,...|[5.0007142316676,...|[0.50007142316676...|       0.0|\n",
+      "|Mon Apr 06 22:20:...|    0|about to file taxes |         0.0|[about, to, file,...|(1000,[108,388,48...|(1000,[108,388,48...|[4.88423644978360...|[0.48842364497836...|       1.0|\n",
+      "|Mon Apr 06 22:20:...|    0|@LettyA ahh ive a...|         0.0|[@lettya, ahh, iv...|(1000,[13,107,201...|(1000,[13,107,201...|[4.65614738179131...|[0.46561473817913...|       1.0|\n",
+      "|Mon Apr 06 22:20:...|    0|@FakerPattyPattz ...|         0.0|[@fakerpattypattz...|(1000,[53,102,154...|(1000,[53,102,154...|[4.56015534791861...|[0.45601553479186...|       1.0|\n",
+      "+--------------------+-----+--------------------+------------+--------------------+--------------------+--------------------+--------------------+--------------------+----------+\n",
       "only showing top 20 rows\n",
       "\n"
      ]
@@ -264,7 +264,7 @@
     {
      "data": {
       "text/plain": [
-       "predictionsDF = [label: int, tweet: string ... 7 more fields]\n"
+       "predictionsDF = [timestamp: string, label: int ... 8 more fields]\n"
       ]
      },
      "metadata": {},
@@ -273,10 +273,10 @@
     {
      "data": {
       "text/plain": [
-       "[label: int, tweet: string ... 7 more fields]"
+       "[timestamp: string, label: int ... 8 more fields]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +307,7 @@
        "UserDefinedFunction(<function1>,DoubleType,Some(List(org.apache.spark.ml.linalg.VectorUDT@3bfc3ba7)))"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
