--- a/spark_ml/notebooks/tweet_feeder.ipynb
+++ b/spark_ml/notebooks/tweet_feeder.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current spark version is 2.4.3\n"
+      "Current spark version is 2.4.4\n"
      ]
     }
    ],
@@ -19,7 +19,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import org.apache.spark.sql.functions._"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +55,7 @@
        "[tweet: string]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -77,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -90,8 +99,8 @@
     {
      "data": {
       "text/plain": [
-       "timer = java.util.Timer@327ddf28\n",
-       "task = $anon$1@1428c503\n"
+       "timer = java.util.Timer@5d41b6de\n",
+       "task = $anon$1@400b916b\n"
       ]
      },
      "metadata": {},
@@ -100,10 +109,10 @@
     {
      "data": {
       "text/plain": [
-       "$anon$1@1428c503"
+       "$anon$1@400b916b"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -111,131 +120,86 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2019-08-21T17:23:27.138Z - saved some data to the events stream!\n",
-      "2019-08-21T17:23:30.292Z - saved some data to the events stream!\n",
-      "2019-08-21T17:23:33.389Z - saved some data to the events stream!\n",
-      "2019-08-21T17:23:36.602Z - saved some data to the events stream!\n",
-      "2019-08-21T17:23:39.835Z - saved some data to the events stream!\n",
-      "2019-08-21T17:23:43.018Z - saved some data to the events stream!\n",
-      "2019-08-21T17:23:46.224Z - saved some data to the events stream!\n",
-      "2019-08-21T17:23:49.422Z - saved some data to the events stream!\n",
-      "2019-08-21T17:23:53.088Z - saved some data to the events stream!\n",
-      "2019-08-21T17:23:56.721Z - saved some data to the events stream!\n",
-      "2019-08-21T17:24:01.058Z - saved some data to the events stream!\n",
-      "2019-08-21T17:24:05.302Z - saved some data to the events stream!\n",
-      "2019-08-21T17:24:08.911Z - saved some data to the events stream!\n",
-      "2019-08-21T17:24:12.080Z - saved some data to the events stream!\n",
-      "2019-08-21T17:24:15.324Z - saved some data to the events stream!\n",
-      "2019-08-21T17:24:18.649Z - saved some data to the events stream!\n",
-      "2019-08-21T17:24:21.853Z - saved some data to the events stream!\n",
-      "2019-08-21T17:24:25.684Z - saved some data to the events stream!\n",
-      "2019-08-21T17:24:29.028Z - saved some data to the events stream!\n",
-      "2019-08-21T17:24:32.301Z - saved some data to the events stream!\n",
-      "2019-08-21T17:24:35.465Z - saved some data to the events stream!\n",
-      "2019-08-21T17:24:38.683Z - saved some data to the events stream!\n",
-      "2019-08-21T17:24:41.880Z - saved some data to the events stream!\n",
-      "2019-08-21T17:24:45.121Z - saved some data to the events stream!\n",
-      "2019-08-21T17:24:48.361Z - saved some data to the events stream!\n",
-      "2019-08-21T17:24:51.558Z - saved some data to the events stream!\n",
-      "2019-08-21T17:24:54.676Z - saved some data to the events stream!\n",
-      "2019-08-21T17:24:57.843Z - saved some data to the events stream!\n",
-      "2019-08-21T17:25:01.038Z - saved some data to the events stream!\n",
-      "2019-08-21T17:25:04.243Z - saved some data to the events stream!\n",
-      "2019-08-21T17:25:07.377Z - saved some data to the events stream!\n",
-      "2019-08-21T17:25:10.536Z - saved some data to the events stream!\n",
-      "2019-08-21T17:25:13.706Z - saved some data to the events stream!\n",
-      "2019-08-21T17:25:16.851Z - saved some data to the events stream!\n",
-      "2019-08-21T17:25:19.997Z - saved some data to the events stream!\n",
-      "2019-08-21T17:25:23.157Z - saved some data to the events stream!\n",
-      "2019-08-21T17:25:26.559Z - saved some data to the events stream!\n",
-      "2019-08-21T17:25:29.776Z - saved some data to the events stream!\n",
-      "2019-08-21T17:25:32.891Z - saved some data to the events stream!\n",
-      "2019-08-21T17:25:36.012Z - saved some data to the events stream!\n",
-      "2019-08-21T17:25:39.192Z - saved some data to the events stream!\n",
-      "2019-08-21T17:25:42.384Z - saved some data to the events stream!\n",
-      "2019-08-21T17:25:45.552Z - saved some data to the events stream!\n",
-      "2019-08-21T17:25:48.668Z - saved some data to the events stream!\n",
-      "2019-08-21T17:25:51.927Z - saved some data to the events stream!\n",
-      "2019-08-21T17:25:55.034Z - saved some data to the events stream!\n",
-      "2019-08-21T17:25:58.141Z - saved some data to the events stream!\n",
-      "2019-08-21T17:26:01.652Z - saved some data to the events stream!\n",
-      "2019-08-21T17:26:04.854Z - saved some data to the events stream!\n",
-      "2019-08-21T17:26:08.494Z - saved some data to the events stream!\n",
-      "2019-08-21T17:26:11.709Z - saved some data to the events stream!\n",
-      "2019-08-21T17:26:14.916Z - saved some data to the events stream!\n",
-      "2019-08-21T17:26:18.312Z - saved some data to the events stream!\n",
-      "2019-08-21T17:26:21.882Z - saved some data to the events stream!\n",
-      "2019-08-21T17:26:25.833Z - saved some data to the events stream!\n",
-      "2019-08-21T17:26:30.008Z - saved some data to the events stream!\n",
-      "2019-08-21T17:26:34.279Z - saved some data to the events stream!\n",
-      "2019-08-21T17:26:38.027Z - saved some data to the events stream!\n",
-      "2019-08-21T17:26:41.239Z - saved some data to the events stream!\n",
-      "2019-08-21T17:26:44.479Z - saved some data to the events stream!\n",
-      "2019-08-21T17:26:47.672Z - saved some data to the events stream!\n",
-      "2019-08-21T17:26:50.955Z - saved some data to the events stream!\n",
-      "2019-08-21T17:26:54.163Z - saved some data to the events stream!\n",
-      "2019-08-21T17:26:57.337Z - saved some data to the events stream!\n",
-      "2019-08-21T17:27:00.532Z - saved some data to the events stream!\n",
-      "2019-08-21T17:27:03.731Z - saved some data to the events stream!\n",
-      "2019-08-21T17:27:06.889Z - saved some data to the events stream!\n",
-      "2019-08-21T17:27:10.099Z - saved some data to the events stream!\n",
-      "2019-08-21T17:27:13.320Z - saved some data to the events stream!\n",
-      "2019-08-21T17:27:16.591Z - saved some data to the events stream!\n",
-      "2019-08-21T17:27:19.727Z - saved some data to the events stream!\n",
-      "2019-08-21T17:27:22.898Z - saved some data to the events stream!\n",
-      "2019-08-21T17:27:26.136Z - saved some data to the events stream!\n",
-      "2019-08-21T17:27:30.279Z - saved some data to the events stream!\n",
-      "2019-08-21T17:27:34.132Z - saved some data to the events stream!\n",
-      "2019-08-21T17:27:37.313Z - saved some data to the events stream!\n",
-      "2019-08-21T17:27:40.608Z - saved some data to the events stream!\n",
-      "2019-08-21T17:27:43.846Z - saved some data to the events stream!\n",
-      "2019-08-21T17:27:47.144Z - saved some data to the events stream!\n",
-      "2019-08-21T17:27:50.371Z - saved some data to the events stream!\n",
-      "2019-08-21T17:27:53.596Z - saved some data to the events stream!\n",
-      "2019-08-21T17:27:56.718Z - saved some data to the events stream!\n",
-      "2019-08-21T17:27:59.859Z - saved some data to the events stream!\n",
-      "2019-08-21T17:28:03.126Z - saved some data to the events stream!\n",
-      "2019-08-21T17:28:06.357Z - saved some data to the events stream!\n",
-      "2019-08-21T17:28:09.684Z - saved some data to the events stream!\n",
-      "2019-08-21T17:28:12.954Z - saved some data to the events stream!\n",
-      "2019-08-21T17:28:16.183Z - saved some data to the events stream!\n",
-      "2019-08-21T17:28:19.371Z - saved some data to the events stream!\n",
-      "2019-08-21T17:28:22.503Z - saved some data to the events stream!\n",
-      "2019-08-21T17:28:25.633Z - saved some data to the events stream!\n",
-      "2019-08-21T17:28:28.834Z - saved some data to the events stream!\n",
-      "2019-08-21T17:28:32.041Z - saved some data to the events stream!\n",
-      "2019-08-21T17:28:35.386Z - saved some data to the events stream!\n",
-      "2019-08-21T17:28:38.705Z - saved some data to the events stream!\n",
-      "2019-08-21T17:28:41.873Z - saved some data to the events stream!\n",
-      "2019-08-21T17:28:45.162Z - saved some data to the events stream!\n",
-      "2019-08-21T17:28:48.406Z - saved some data to the events stream!\n",
-      "2019-08-21T17:28:51.597Z - saved some data to the events stream!\n",
-      "2019-08-21T17:28:54.853Z - saved some data to the events stream!\n",
-      "2019-08-21T17:28:58.065Z - saved some data to the events stream!\n",
-      "2019-08-21T17:29:01.214Z - saved some data to the events stream!\n",
-      "2019-08-21T17:29:04.339Z - saved some data to the events stream!\n",
-      "2019-08-21T17:29:07.511Z - saved some data to the events stream!\n",
-      "2019-08-21T17:29:10.661Z - saved some data to the events stream!\n",
-      "2019-08-21T17:29:13.802Z - saved some data to the events stream!\n",
-      "2019-08-21T17:29:17.037Z - saved some data to the events stream!\n",
-      "2019-08-21T17:29:20.177Z - saved some data to the events stream!\n",
-      "2019-08-21T17:29:23.660Z - saved some data to the events stream!\n",
-      "2019-08-21T17:29:26.921Z - saved some data to the events stream!\n",
-      "2019-08-21T17:29:30.056Z - saved some data to the events stream!\n",
-      "2019-08-21T17:29:33.237Z - saved some data to the events stream!\n",
-      "2019-08-21T17:29:36.425Z - saved some data to the events stream!\n",
-      "2019-08-21T17:29:39.529Z - saved some data to the events stream!\n",
-      "2019-08-21T17:29:43.169Z - saved some data to the events stream!\n",
-      "2019-08-21T17:29:47.133Z - saved some data to the events stream!\n",
-      "2019-08-21T17:29:50.998Z - saved some data to the events stream!\n",
-      "2019-08-21T17:29:54.490Z - saved some data to the events stream!\n",
-      "2019-08-21T17:29:58.009Z - saved some data to the events stream!\n",
-      "2019-08-21T17:30:01.941Z - saved some data to the events stream!\n",
-      "2019-08-21T17:30:05.540Z - saved some data to the events stream!\n",
-      "2019-08-21T17:30:09.404Z - saved some data to the events stream!\n",
-      "2019-08-21T17:30:13.412Z - saved some data to the events stream!\n",
-      "2019-08-21T17:30:17.949Z - saved some data to the events stream!\n",
-      "2019-08-21T17:30:21.776Z - saved some data to the events stream!\n"
+      "2020-01-17T22:58:02.969Z - saved some data to the events stream!\n",
+      "2020-01-17T22:58:08.572Z - saved some data to the events stream!\n",
+      "2020-01-17T22:58:14.707Z - saved some data to the events stream!\n",
+      "2020-01-17T22:58:21.348Z - saved some data to the events stream!\n",
+      "2020-01-17T22:58:28.135Z - saved some data to the events stream!\n",
+      "2020-01-17T22:58:34.115Z - saved some data to the events stream!\n",
+      "2020-01-17T22:58:40.567Z - saved some data to the events stream!\n",
+      "2020-01-17T22:58:47.452Z - saved some data to the events stream!\n",
+      "2020-01-17T22:58:55.062Z - saved some data to the events stream!\n",
+      "2020-01-17T22:59:02.202Z - saved some data to the events stream!\n",
+      "2020-01-17T22:59:13.282Z - saved some data to the events stream!\n",
+      "2020-01-17T22:59:22.707Z - saved some data to the events stream!\n",
+      "2020-01-17T22:59:33.135Z - saved some data to the events stream!\n",
+      "2020-01-17T22:59:46.282Z - saved some data to the events stream!\n",
+      "2020-01-17T22:59:57.673Z - saved some data to the events stream!\n",
+      "2020-01-17T23:00:10.153Z - saved some data to the events stream!\n",
+      "2020-01-17T23:00:22.313Z - saved some data to the events stream!\n",
+      "2020-01-17T23:00:38.672Z - saved some data to the events stream!\n",
+      "2020-01-17T23:00:55.436Z - saved some data to the events stream!\n",
+      "2020-01-17T23:01:12.957Z - saved some data to the events stream!\n",
+      "2020-01-17T23:01:38.876Z - saved some data to the events stream!\n",
+      "2020-01-17T23:01:58.133Z - saved some data to the events stream!\n",
+      "2020-01-17T23:02:12.356Z - saved some data to the events stream!\n",
+      "2020-01-17T23:02:31.910Z - saved some data to the events stream!\n",
+      "2020-01-17T23:03:09.165Z - saved some data to the events stream!\n",
+      "2020-01-17T23:03:39.944Z - saved some data to the events stream!\n",
+      "2020-01-17T23:04:30.832Z - saved some data to the events stream!\n",
+      "2020-01-17T23:05:19.655Z - saved some data to the events stream!\n",
+      "2020-01-17T23:05:47.350Z - saved some data to the events stream!\n",
+      "2020-01-17T23:05:51.470Z - saved some data to the events stream!\n",
+      "2020-01-17T23:05:55.923Z - saved some data to the events stream!\n",
+      "2020-01-17T23:06:00.310Z - saved some data to the events stream!\n",
+      "2020-01-17T23:06:04.523Z - saved some data to the events stream!\n",
+      "2020-01-17T23:06:08.822Z - saved some data to the events stream!\n",
+      "2020-01-17T23:06:14.102Z - saved some data to the events stream!\n",
+      "2020-01-17T23:06:19.211Z - saved some data to the events stream!\n",
+      "2020-01-17T23:06:24.182Z - saved some data to the events stream!\n",
+      "2020-01-17T23:06:28.839Z - saved some data to the events stream!\n",
+      "2020-01-17T23:06:33.483Z - saved some data to the events stream!\n",
+      "2020-01-17T23:06:38.235Z - saved some data to the events stream!\n",
+      "2020-01-17T23:06:43.431Z - saved some data to the events stream!\n",
+      "2020-01-17T23:06:48.868Z - saved some data to the events stream!\n",
+      "2020-01-17T23:06:52.818Z - saved some data to the events stream!\n",
+      "2020-01-17T23:06:56.687Z - saved some data to the events stream!\n",
+      "2020-01-17T23:07:00.559Z - saved some data to the events stream!\n",
+      "2020-01-17T23:07:04.457Z - saved some data to the events stream!\n",
+      "2020-01-17T23:07:08.481Z - saved some data to the events stream!\n",
+      "2020-01-17T23:07:12.452Z - saved some data to the events stream!\n",
+      "2020-01-17T23:07:16.394Z - saved some data to the events stream!\n",
+      "2020-01-17T23:07:20.180Z - saved some data to the events stream!\n",
+      "2020-01-17T23:07:23.930Z - saved some data to the events stream!\n",
+      "2020-01-17T23:07:27.651Z - saved some data to the events stream!\n",
+      "2020-01-17T23:07:31.502Z - saved some data to the events stream!\n",
+      "2020-01-17T23:07:35.312Z - saved some data to the events stream!\n",
+      "2020-01-17T23:07:39.221Z - saved some data to the events stream!\n",
+      "2020-01-17T23:07:43.129Z - saved some data to the events stream!\n",
+      "2020-01-17T23:07:46.899Z - saved some data to the events stream!\n",
+      "2020-01-17T23:07:50.688Z - saved some data to the events stream!\n",
+      "2020-01-17T23:07:54.496Z - saved some data to the events stream!\n",
+      "2020-01-17T23:07:58.337Z - saved some data to the events stream!\n",
+      "2020-01-17T23:08:02.131Z - saved some data to the events stream!\n",
+      "2020-01-17T23:08:06.023Z - saved some data to the events stream!\n",
+      "2020-01-17T23:08:09.932Z - saved some data to the events stream!\n",
+      "2020-01-17T23:08:13.773Z - saved some data to the events stream!\n",
+      "2020-01-17T23:08:17.667Z - saved some data to the events stream!\n",
+      "2020-01-17T23:08:21.522Z - saved some data to the events stream!\n",
+      "2020-01-17T23:08:25.332Z - saved some data to the events stream!\n",
+      "2020-01-17T23:08:29.113Z - saved some data to the events stream!\n",
+      "2020-01-17T23:08:33.050Z - saved some data to the events stream!\n",
+      "2020-01-17T23:08:36.861Z - saved some data to the events stream!\n",
+      "2020-01-17T23:08:40.704Z - saved some data to the events stream!\n",
+      "2020-01-17T23:08:44.674Z - saved some data to the events stream!\n",
+      "2020-01-17T23:08:48.637Z - saved some data to the events stream!\n",
+      "2020-01-17T23:08:52.518Z - saved some data to the events stream!\n",
+      "2020-01-17T23:08:56.379Z - saved some data to the events stream!\n",
+      "2020-01-17T23:09:00.316Z - saved some data to the events stream!\n",
+      "2020-01-17T23:09:05.005Z - saved some data to the events stream!\n",
+      "2020-01-17T23:09:13.139Z - saved some data to the events stream!\n",
+      "2020-01-17T23:09:19.349Z - saved some data to the events stream!\n",
+      "2020-01-17T23:09:25.794Z - saved some data to the events stream!\n"
      ]
     }
    ],
@@ -247,7 +211,11 @@
     "val task = new TimerTask {\n",
     "  def run(): Unit = {\n",
     "      val data = raw_sentiment.sample(fraction=0.00001,withReplacement=true)\n",
-    "      data.coalesce(1).write.format(\"json\").mode(\"append\").save(\"/home/jovyan/data/events-stream\")\n",
+    "      data\n",
+    "          .withColumn(\"timestamp\", current_timestamp())\n",
+    "          .coalesce(1)\n",
+    "          .write.format(\"json\").mode(\"append\")\n",
+    "          .save(\"/home/jovyan/data/events-stream\")\n",
     "      println(s\"${Calendar.getInstance().toInstant} - saved some data to the events stream!\")\n",
     "  } \n",
     "}\n",
@@ -259,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +236,7 @@
        "true"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
